[package]
name = "bevy_ui_text_input"
keywords = ["bevy", "gamedev", "ui", "text", "input"]
description = "Bevy UI gradients plugin"
categories = ["game-development", "gui", "text-editors"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ickshonpe/bevy_ui_text_input"


[dependencies]
bevy = { version = "0.15", features = ["bevy_asset", "bevy_ui"] }
arboard = "3.5.0"
sys-locale = "0.3.0"
regex = "1.11.1"
once_cell = "1.21.3"
cosmic_undo_2 = "0.2.0"
